--- a/style.css
+++ b/style.css
@@ -1,111 +1,127 @@
 *{
-margin: 0;
-padding: 0;
-}
-
-body
-{
-    background: #553D67;
-    display: flex;
-    align-items:flex-start;
-    justify-items: center;
-    height: 80vh;
-}
-
-.container1
-{
-    background: white;
-    flex-direction: column;
-    border-radius: 20px;
-    align-self:flex-end;
-    width: 500px;
-    height: 400px;
-    margin-left: 200px;
-    padding: 20px;
-    /* padding: 20px;
-    margin-top: 10px;
-    margin-left: 600px; */
-}
-.container2
-{
-    background: white;
-    border-radius: 20px;
-    flex-direction: column;
-    width: 500px;
-    height: 400px;
-    /* padding: 20px;
-    margin-top: 400px;
-    margin-left: 0px;
-    margin-right: 5000px; */
-}
-.container3
-{
-    background: white;
-    border-radius: 20px;
-    align-self:flex-end;
-    width: 500px;
-    height: 400px;
-    /* padding: 20px;
-    margin-top: 400px;
-    margin-right: 0px;
-    margin-left:-2000px; */
-}
-.container1 > .row,.container2 > .row,.container3 > .row
-{
-    width: 100%;
-    justify-content:  space-evenly;
-}
-
-.row
-{
-    display: flex;
-}
-.col
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.name
-{
-    margin: 20px 0;
-    font-family: 'Roboto Slab', serif;
-    font-weight: Bold;
-    color: rgb(63, 55, 55);
-}
-
-.round-shots
-{
-    font-size: xx-large;
-}
-.round-shots > span{
-    margin: 0 5px;
-}
-.score
-{
-    font-size: xx-large;
-}
-
-.score > span{
-    margin: 0 5px;
-}
-
-#btnShootA,#btnShootB,#btnShootC
-{
-    border: none;
-    border-radius: 25px;
-    font-size: large;
-    width: 300px;
-    background: radial-gradient(red,yellow);
-    padding: 10px;
-    color: white;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    outline:none;
-}
-/* .profile-icon 
-{
- 
-} */
+    margin: 0;
+    padding: 0;
+    }
+    
+    body
+    {
+        background: #553D67;
+        display: flex;
+        align-items:flex-start;
+        justify-items: center;
+        height: 80vh;
+    }
+    
+    .container1
+    {
+        background: white;
+        flex-direction: column;
+        border-radius: 20px;
+        align-self:flex-end;
+        width: 500px;
+        height: 400px;
+        margin-left: 200px;
+        padding: 20px;
+        /* padding: 20px;
+        margin-top: 10px;
+        margin-left: 600px; */
+    }
+    .container2
+    {
+        background: white;
+        border-radius: 20px;
+        flex-direction: column;
+        width: 500px;
+        height: 400px;
+        padding:20px ;
+        margin-top: 50px;
+        /* padding: 20px;
+        margin-top: 400px;
+        margin-left: 0px;
+        margin-right: 5000px; */
+    }
+    .container3
+    {
+        background: white;
+        border-radius: 20px;
+        align-self:flex-end;
+        width: 500px;
+        height: 400px;
+        padding:20px ;
+        /* padding: 20px;
+        margin-top: 400px;
+        margin-right: 0px;
+        margin-left:-2000px; */
+    }
+    .container1 > .row,.container2 > .row,.container3 > .row
+    {
+        width: 100%;
+        justify-content:  space-evenly;
+    }
+    
+    .row
+    {
+        display: flex;
+    }
+    .col
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .name
+    {
+        margin: 20px 0;
+        font-family: 'Roboto Slab', serif;
+        font-weight: Bold;
+        color: rgb(63, 55, 55);
+    }
+    
+    .round-shots
+    {
+        font-size: xx-large;
+    }
+    .round-shots > span{
+        margin: 0 5px;
+    }
+    .score
+    {
+        font-size: xx-large;
+    }
+    
+    .score > span{
+        margin: 0 5px;
+    }
+    
+    #btnShootA,#btnShootB
+    {
+        border: none;
+        border-radius: 25px;
+        font-size: large;
+        width: 300px;
+        background: radial-gradient(red,yellow);
+        padding: 10px;
+        color: white;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        outline:none;
+    }
+    #btnShootC
+    {
+        border: none;
+        border-radius: 25px;
+        font-size: large;
+        width: 300px;
+        background: radial-gradient(red,yellow);
+        padding: 10px;
+        color: white;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        outline:none;
+    }
+    /* .profile-icon 
+    {
+     
+    } */
