--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
     
     body
     {
-        background: #553D67;
         display: flex;
         align-items:flex-start;
-        justify-items: center;
         height: 80vh;
+        justify-content:  space-around;
+        background-image: linear-gradient(to left,rebeccapurple,blueviolet);
     }
     
     .container1
     {
-        background: white;
+        background:mediumslateblue;
         flex-direction: column;
         border-radius: 20px;
         align-self:flex-end;
@@ -42,7 +42,7 @@
     }
     .container3
     {
-        background: white;
+        background:mediumslateblue;
         border-radius: 20px;
         align-self:flex-end;
         width: 500px;
@@ -95,33 +95,47 @@
         margin: 0 5px;
     }
     
-    #btnShootA,#btnShootB
+    #btnShootA,#btnShootB,#btnShootC
     {
         border: none;
         border-radius: 25px;
         font-size: large;
         width: 300px;
-        background: radial-gradient(red,yellow);
+        background: radial-gradient(black,silver);
         padding: 10px;
         color: white;
         margin-top: 50px;
         margin-bottom: 50px;
         outline:none;
     }
-    #btnShootC
+
+    .bull
     {
-        border: none;
-        border-radius: 25px;
-        font-size: large;
-        width: 300px;
-        background: radial-gradient(red,yellow);
-        padding: 10px;
-        color: white;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        outline:none;
+        height: 20px;
+        width: 20px;
+        display: inline-block;
+        border:1px solid #000;
+        border-radius: 50%;
+        padding: 1px;
+    }
+    .square
+    {
+        width: 100;
+        height: 125;
+        display: inline-flexbox;
+        border:1px solid goldenrod;
+        background-image: linear-gradient(to right,silver,white);
+        border-radius: 1%;
+    }
+    .result
+    {
+        margin: 20px 0;
+        font-family: 'Roboto Slab', serif;
+        font-weight: Bold;
+        color: dimgray;
     }
     /* .profile-icon 
+
     {
      
     } */
